--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import"./components/modal-window";
 @import"./components/overlay";
 @import"./components/social";
+@import"./components/mobile-menu";
 
 @import"./layout/header";
 @import"./layout/about";
