--- a/css/main.css
+++ b/css/main.css
@@ -76,39 +76,34 @@ img {
 }
 
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: aqua;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 body {
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-color);
-}
-
-.address {
-  font-style: inherit;
-  color: rgba(255, 255, 255, 0.6);
-}
-.address-list {
-  display: flex;
-  flex-direction: column;
-  gap: 9px;
-}
-.address-link[target=_blank] {
-  color: var(--text-title);
-}
-.address-link {
-  transition: color var(--transition);
-}
-.address-link:hover, .address-link:focus {
-  color: var(--text-link-act);
-  fill: var(--text-link-act);
 }
 
 .btn {
@@ -176,7 +171,6 @@ body {
 }
 
 .card-item {
-  /* max-width: 270px; */
   flex-basis: calc((100% - (var(--card-item) - 1) * var(--cadr-gap)) / var(--card-item));
 }
 
@@ -444,59 +438,80 @@ body {
   fill: var(--text-title);
 }
 
-.header {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  border-bottom: 1px solid var(--border);
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  .mobile-menu__close-icon {
+    width: 18px;
+    height: 18px;
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 21px;
+    right: 25px;
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+    line-height: 0;
+    margin-right: auto;
+  }
+  .mobile-menu__container {
+    position: relative;
+    padding-left: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+.contacts__link {
+  display: none;
+}
+
+.open-mobile-menu-btn__icon {
+  width: 24px;
+  height: 16px;
+}
+
+.open-mobile-menu-btn {
+  line-height: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
 }
 
 .header__container {
   display: flex;
-  align-items: center;
+  align-content: center;
+  justify-content: space-between;
 }
 
-.header__list {
-  display: flex;
-  margin-right: auto;
-  gap: 50px;
+.header__container {
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
-.header__contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  gap: 30px;
-}
-
-.header .logo {
-  margin-right: 93px;
+.nav__link {
+  display: none;
 }
 
 .logo-header {
   color: var(--logo-color);
-}
-
-.contacts__link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color var(--transition);
-}
-.contacts__link:hover, .contacts__link:focus {
-  color: var(--text-link-act);
-  fill: var(--text-link-act);
-}
-
-.contact__item {
-  display: flex;
-  align-items: center;
-}
-
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
 }
 
 .about {
@@ -607,37 +622,7 @@ body {
 }
 
 .nav {
-  display: flex;
-  color: var(--text-color-main);
-}
-
-.nav__link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color var(--transition);
-}
-.nav__link:hover, .nav__link:focus {
-  color: var(--text-link-act);
-  fill: var(--text-link-act);
-}
-
-.active {
-  position: relative;
-  color: var(--text-link-act);
-}
-
-.active::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--text-link-act);
-  border-radius: 2px;
+  display: none;
 }
 
 .description__list {
