--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,17 @@
 .contacts__link {
     display: none;
 }
-.open-mobile-menu-btn__icon {
-width: 24px; 
-height: 16px;
-}
 
-.open-mobile-menu-btn {
-        line-height: 0;
-        border: none;
-        background-color: transparent;
-        padding: 0;
+// .open-mobile-menu-btn__icon {
+//     width: 24px;
+//     height: 16px;
+// }
+
+.open-mobile-menu {
+    line-height: 0;
+    border: none;
+    background-color: transparent;
+    padding: 0;
 
 }
 
