--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,21 +1,16 @@
 @media screen and (max-width: 767px) {
-.mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-
-}
-.mobile-menu__close-icon {
-    width: 18px; ;
-    height: 18px;
-
-}
+    .mobile-menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        pointer-events: none;
+         }
+  
+         
 .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
@@ -33,14 +28,44 @@
     margin-right: auto;
 }
 
+.open-mobile-menu.is-open .mobile-menu__btn {
+        display: none;
+
+    }
+
+.mobile-menu__close-btn {
+        display: none;
+    }
+
+.open-mobile-menu.is-open .mobile-menu__close-btn {
+        display: block;
+    }
+
+.mobile__nav-link {
+    color:#212121;;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+}
 .mobile-menu__container {
     position: relative;
     padding-left: 40px;
 }
+
+.mobile__social-item {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    color: $accient-color;
+    letter-spacing: 0.02em;
+
+    padding-right: 10px;
 }
 
 @media screen and (min-width: 768px) {
-    .mobile-menu {
+    .mobile__menu {
         display: none;
     }
+}
 }
