--- a/css/main.css
+++ b/css/main.css
@@ -82,9 +82,12 @@ img {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    max-width: 480px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -439,19 +442,32 @@ body {
 
 @media screen and (max-width: 767px) {
   .mobile-menu {
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    pointer-events: none;
   }
   .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    overflow-y: scroll;
+    z-index: 2;
+    padding: 32px 40px;
+  }
+  .open-mobile-menu {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    background-color: transparent;
+    z-index: 3;
+    fill: #212121;
   }
   .mobile-menu__close-btn {
     position: absolute;
@@ -473,11 +489,59 @@ body {
     display: block;
   }
   .mobile__nav-link {
+    font: Roboto;
     color: #212121;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.18;
     letter-spacing: 0.02em;
+    text-decoration: none;
+  }
+  .mobile-menu__container {
+    position: relative;
+    padding-left: 40px;
+  }
+  .mobile__contacts {
+    margin-bottom: 48px;
+  }
+  .mobile__social {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .mobile__social-item {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    color: #2196F3;
+    letter-spacing: 0.02em;
+    padding-right: 10px;
+    list-style: none;
+  }
+  .mobile__social-item:nth-child(-n+3) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile__contacts-item {
+    padding: 16px 0;
+    list-style: none;
+  }
+  .mobile__nav-item {
+    padding: 16px 0;
+    list-style: none;
+  }
+  .mobile__nav-link.phone {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+  }
+  .mobile__nav-link.mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #757575;
   }
 }
 @media screen and (min-width: 768px) {
