--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,10 +6,12 @@
 
 @media screen and (min-width: 480px) {
     .container {
-    width: 480px;
-   margin-left: auto;
-   margin-right: auto;
-
+    max-width: 480px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 
