--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,21 +1,42 @@
 @media screen and (max-width: 767px) {
     .mobile-menu {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 100;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.mobile-menu.is-open {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         width: 100%;
         height: 100%;
-        opacity: 0;
-        pointer-events: none;
-         }
-  
-         
-.mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-}
+        background-color: #fff;
+        overflow-y: scroll;
+        z-index: 2;
+        padding: 32px 40px;
+    }
+
+
+ .open-mobile-menu {
+     position: absolute;
+     top: 10px;
+     right: 15px;
+     padding: 0;
+     margin: 0;
+     border: none;
+     background-color: transparent;
+     z-index: 3;
+     fill: #212121;
+
+ }
+
+// .mobile-menu__btn:hover
+// .mobile-menu__close-btn:hover {
+//         color: var(--text-link-act);
+//         fill: var(--text-link-act);
+//     }
 
 .mobile-menu__close-btn {
     position: absolute;
@@ -41,31 +62,75 @@
         display: block;
     }
 
+
 .mobile__nav-link {
+    font: Roboto ;
     color:#212121;;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.18;
     letter-spacing: 0.02em;
+    text-decoration: none;
 }
 .mobile-menu__container {
     position: relative;
     padding-left: 40px;
 }
 
+.mobile__contacts {
+    margin-bottom: 48px;
+}
+
+.mobile__social {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
 .mobile__social-item {
     font-weight: 500;
     font-size: 18px;
     line-height: 1.22;
-    color: $accient-color;
+    color: #2196F3;
     letter-spacing: 0.02em;
-
     padding-right: 10px;
+    list-style: none;
+
+    &:nth-child(-n + 3) {
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+    }
 }
+
+.mobile__contacts-item {
+    padding: 16px 0;
+    list-style: none;
+}
+
+.mobile__nav-item {
+    padding: 16px 0;
+    list-style: none;
+}
+
+.mobile__nav-link.phone {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+}
+
+.mobile__nav-link.mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #757575;
+}
+}
+
 
 @media screen and (min-width: 768px) {
     .mobile__menu {
         display: none;
     }
-}
 }
