--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -43,6 +43,8 @@
     top: 21px;
     right: 25px;
     background-color: transparent;
+    // width: 19px ;  
+    // height: 19px;
     border: 0;
     padding: 0;
     line-height: 0;
