--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,25 +1,53 @@
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    max-width: 1600px;
-    text-align: center;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/hero.jpg);
-    background-color: var(--bgcolor-hero);
+
+    @media screen and (max-width: 767pxpa) {
+            padding: 118px 60px;
+            max-width: 480px;
+            background-size: 480px 400px;
+            background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/img/hero_mobile@2x.jpg);
+            background-color: var(--bgcolor-hero);
+        }
+    @media screen and (min-device-pixel-ratio: 2),
+                 screen and (min-resolution: 192dpi),
+                 screen and (min-resolution: 2dppx) {
+                    background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                             url(../images/img/hero_mobile@2x.jpg);
+                             
+                 }
 }
 
-.hero__title {
-    max-width: 696px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--text-title);
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding: 118px 204px;
+    
 }
+
+
+
+// .hero {
+//     padding-top: 200px;
+//     padding-bottom: 200px;
+//     max-width: 1600px;
+//     text-align: center;
+//     margin-left: auto;
+//     margin-right: auto;
+//     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+//         url(../images/hero.jpg);
+//     background-color: var(--bgcolor-hero);
+// }
+
+// .hero__title {
+//     max-width: 696px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     margin-bottom: 30px;
+//     font-weight: 900;
+//     font-size: 44px;
+//     line-height: 1.36;
+//     text-align: center;
+//     letter-spacing: 0.06em;
+//     text-transform: uppercase;
+//     color: var(--text-title);
+// }
