--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,10 @@
+@import './buttons';
+
 .hero {
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (max-width: 767pxpa) {
+    @media screen and (max-width: 767px) {
             padding: 118px 60px;
             max-width: 480px;
             background-size: 480px 400px;
@@ -17,11 +19,69 @@
                              url(../images/img/hero_mobile@2x.jpg);
                              
                  }
-}
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-    padding: 118px 204px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+                 padding: 118px 204px;
+                 width: 768px;
+                 height: 400px;
+                 background-size: 768px 400px;
+                 background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                 url(../images/img/hero_tablet@1x.jpg);
+                 background-color: var(--bgcolor-hero);
+                
+                 @media screen and (min-device-pixel-ratio: 2),
+                 screen and (min-resolution: 192dpi),
+                 screen and (min-resolution: 2dppx) {
+                 background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                 url(../images/img/hero_tablet@2x.jpg);
+                  
+                }
+                
+                }
+
+    @media screen and (min-width: 1199px) {
+             padding: 200px 0;
     
+             max-width: 1600px;
+             height: 600px;
+    
+             background-size: 1600px 600px;
+    
+             background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url(../images/img/hero_desktop@1x.jpg);
+            background-color: var(--bgcolor-hero);
+    
+             @media screen and (min-device-pixel-ratio: 2),
+             screen and (min-resolution: 192dpi),
+             screen and (min-resolution: 2dppx) {
+                 background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                     url(../images/img/hero_desktop@2x.jpg);
+             }
+         }
+                 .hero__title {
+                    margin: 0;
+                     margin-left: auto;
+                     margin-right: auto;
+                     margin-bottom: 30px;
+                     font-size: 44px;
+                     line-height: 1.36;
+                     text-align: center;
+                     letter-spacing: 0.06em;
+                     text-transform: uppercase;
+                     color: var(--text-title);
+                 }
+        
+                 @media screen and (max-width: 1199px) {
+                     font-size: 26px;
+                     line-height: 1.61;
+                 }
+        
+                 @media screen and (min-width: 696px) {
+                     max-width: 696px;
+                 }
+.hero-btn {
+ display: flex;
+ }
 }
 
 
