--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,8 +1,8 @@
-.logo {
-    font-family: var(--second-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    color: var(--text-link-act);
+// .logo {
+//     font-family: var(--second-font);
+//     font-weight: 700;
+//     font-size: 26px;
+//     line-height: 1.19;
+//     color: var(--text-link-act);
     
-}
+// }
