--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -63,73 +63,73 @@
 .open-mobile-menu.is-open .mobile-menu__close-btn {
         display: block;
     }
-
-
-.mobile__nav-link {
-    font: Roboto ;
-    color:#212121;;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
-    text-decoration: none;
+         .mobile__nav-link {
+             font: Roboto;
+             color: #212121;
+             ;
+             font-weight: 500;
+             font-size: 40px;
+             line-height: 1.18;
+             letter-spacing: 0.02em;
+             text-decoration: none;
+         }
+    
+         .mobile-menu__container {
+             position: relative;
+             padding-left: 40px;
+         }
 }
-.mobile-menu__container {
-    position: relative;
-    padding-left: 40px;
-}
+ 
 
-.mobile__contacts {
-    margin-bottom: 48px;
-}
+ .mobile__contacts {
+     margin-bottom: 48px;
+ }
 
-.mobile__social {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
+ .mobile__social {
+     display: flex;
+     flex-wrap: wrap;
+     gap: 10px;
+ }
 
-.mobile__social-item {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.22;
-    color: #2196F3;
-    letter-spacing: 0.02em;
-    padding-right: 10px;
-    list-style: none;
+ .mobile__social-item {
+     font-weight: 500;
+     font-size: 18px;
+     line-height: 1.22;
+     color: #2196F3;
+     letter-spacing: 0.02em;
+     padding-right: 10px;
+     list-style: none;
 
-    &:nth-child(-n + 3) {
-        border-right: 1px solid rgba(33, 33, 33, 0.2);
-    }
-}
+     &:nth-child(-n + 3) {
+         border-right: 1px solid rgba(33, 33, 33, 0.2);
+     }
+ }
 
-.mobile__contacts-item {
-    padding: 16px 0;
-    list-style: none;
-}
+ .mobile__contacts-item {
+     padding: 16px 0;
+     list-style: none;
+ }
 
-.mobile__nav-item {
-    padding: 16px 0;
-    list-style: none;
-}
+ .mobile__nav-item {
+     padding: 16px 0;
+     list-style: none;
+ }
 
-.mobile__nav-link.phone {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
-    color: #2196F3;
-}
+ .mobile__nav-link.phone {
+     font-weight: 500;
+     font-size: 34px;
+     line-height: 1.18;
+     letter-spacing: 0.02em;
+     color: #2196F3;
+ }
 
-.mobile__nav-link.mail {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
-    color: #757575;
-}
-}
-
+ .mobile__nav-link.mail {
+     font-weight: 500;
+     font-size: 24px;
+     line-height: 1.17;
+     letter-spacing: 0.02em;
+     color: #757575;
+ }
 
 @media screen and (min-width: 768px) {
     .mobile__menu {
