--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,34 +1,28 @@
 .container {
-
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
     .container {
-    max-width: 480px;
-        width: 100%;
+        width: 480px;
         margin-left: auto;
         margin-right: auto;
-        padding-left: 15px;
-        padding-right: 15px;
     }
 }
 
 @media screen and (min-width: 768px) {
-       .container {
+    .container {
         width: 768px;
-        
-    } 
+
+    }
 }
 
- @media screen and (min-width: 1200px ) {
-            .container {
-                width: 1200px;
-            }
-        }
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
 
 // .container {
 //     width: 1200px;
