--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -2,11 +2,12 @@
     padding-top: 94px;
     padding-bottom: 94px;
 }
-.section-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    margin-bottom: 50px;
-    text-align: center;
-    color: var(--text-color-main);
-}
+
+// .section-title {
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 1.17;
+//     margin-bottom: 50px;
+//     text-align: center;
+//     color: var(--text-color-main);
+// }
