--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,9 +1,24 @@
 .social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+    margin: 0;
+    margin-left: 0;
+    gap: 30px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+    }
 }
+// .social {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     gap: 10px;
+// }
 
 .social-link {
     display: flex;
