--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,22 +1,68 @@
 .about {
-    padding-top: 0;
-      &__list {--card-item: 3; }
-      &__title {
-            position: absolute;
-            bottom: 0;
-            text-align: center;
-            padding-top: 27px;
-            padding-bottom: 27px;
-            background: rgba(47, 48, 58, 0.8);
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 1.14;
-            text-transform: uppercase;
-            color: var(--text-title);
-            width: 100%;
+        padding-top: 0;
+
+        @media screen and (max-width: 1199px) {
+            display: none;
         }
+    }
+
+.section-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+    text-align: center;
+    color: var(--text-color-main);
+    letter-spacing: 0.03em;
+}
+.about__list {
+    display: flex;
+    gap: 30px;
+    }
+
+ .card-item {
+    position: relative;
+ }
+.about__title {
+    position: absolute;
+        bottom: 0;
+    
+        padding: 27px 0;
+        width: 100%;
+        background-color: rgba(47, 48, 58, 0.8);
+    
+        font-weight: 700;
+        line-height: 1.14;
+        text-transform: uppercase;
+        letter-spacing: 0.03em;
+        color: var(--text-title);
+        text-align: center;
 }
 
-.about__list .card-item {
-    position: relative;
-}
+// .about 
+// {
+//     padding-top: 0;
+
+//     &__list {
+//         --card-item: 3;
+//     }
+
+//     &__title {
+//         position: absolute;
+//         bottom: 0;
+//         text-align: center;
+//         padding-top: 27px;
+//         padding-bottom: 27px;
+//         background: rgba(47, 48, 58, 0.8);
+//         font-weight: 700;
+//         font-size: 14px;
+//         line-height: 1.14;
+//         text-transform: uppercase;
+//         color: var(--text-title);
+//         width: 100%;
+//     }
+// }
+
+// .about__list .card-item {
+//     position: relative;
+// }
