--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,37 +1,33 @@
 .nav {
-    display: none;
+    display: flex;
+    color: var(--text-color-main);
+}
+.nav__link {
+    display: flex;
+    align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color var(--transition);
+
+    &:hover,
+    &:focus {
+            color: var(--text-link-act);
+            fill: var(--text-link-act);
+        }
+}
+.active {
+    position: relative;
+    color: var(--text-link-act);
 }
 
-// .nav {
-//     display: flex;
-//     color: var(--text-color-main);
-// }
-// .nav__link {
-//     display: flex;
-//     align-items: center;
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//     transition: color var(--transition);
-
-//     &:hover,
-//     &:focus {
-//             color: var(--text-link-act);
-//             fill: var(--text-link-act);
-//         }
-// }
-// .active {
-//     position: relative;
-//     color: var(--text-link-act);
-// }
-
-// .active::after {
-//     content: '';
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//     display: block;
-//     width: 100%;
-//     height: 4px;
-//     background-color: var(--text-link-act);
-//     border-radius: 2px;
-// }
+.active::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--text-link-act);
+    border-radius: 2px;
+}
