--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -1,23 +1,28 @@
-// .address {
-//     font-style: inherit;
-//     color: rgba(255, 255, 255, 0.6);
+.address {
 
-//     &-list {
-//             display: flex;
-//             flex-direction: column;
-//             gap: 9px;
-//         }
-//     &-link[target='_blank'] {
-//            color: var(--text-title);
-//                 }
+    @media screen and (max-width: 769px) {
+            text-align: center;
+        }
+
+    font-style: inherit;
+    color: rgba(255, 255, 255, 0.6);
+
+    &-list {
+            display: flex;
+            flex-direction: column;
+            gap: 9px;
+        }
+    &-link[target='_blank'] {
+           color: var(--text-title);
+                }
         
-//     &-link {
-//             transition: color var(--transition);
-//                 }
+    &-link {
+            transition: color var(--transition);
+                }
         
-//     &-link:hover,
-//     &-link:focus {
-//             color: var(--text-link-act);
-//             fill: var(--text-link-act);
-//                 }
-// }
+    &-link:hover,
+    &-link:focus {
+            color: var(--text-link-act);
+            fill: var(--text-link-act);
+                }
+}
