--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,7 +1,8 @@
 .social {
-    margin: 0;
-    margin-left: 0;
-    gap: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 
     @media screen and (min-width: 768px) {
         display: flex;
