--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 92px;
+    width: 210px;
     border: 1px solid currentColor;
     border-radius: 4px;
     color: var(--icon-color);
