--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,14 +1,29 @@
+.footer__box {
+    @media screen and (min-width: 760px) {
+    display: flex;
+    text-align: center;
+    }
+}
+.footer__address {
+    @media screen and (min-width: 760px) {
+        margin-right: 70px;
+    }
+   
+}
+
+
+
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #2f303a;
 
-    &__address {
-        margin-right: 70px;
-    }
+    // &__address {
+    //     margin-right: 70px;
+    // }
 
     &__box {
-        display: flex;
+        
         align-items: baseline;
     }
 }
@@ -19,6 +34,10 @@
 }
 
 .footer__title {
+@media screen and (max-width: 769px) {
+        text-align: center;
+    }
+    
     font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
@@ -41,7 +60,12 @@
     color: var(--text-title);
 }
 
+
 .footer .logo {
+
+    @media screen and (max-width: 769px) {
+            text-align: center;
+        }
     display: block;
     margin-bottom: 20px;
 }
