--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -91,11 +91,16 @@
   margin-right: 10px;
   fill: currentColor;
 }
-// .header__list {
-//   display: flex;
-//   margin-right: auto;
-//   gap: 50px;
-// }
+
+.header__list {
+  display: flex;
+  margin-right: auto;
+  gap: 50px;
+
+  @media screen and (max-width: 769px) {
+      display: none;
+    }
+}
 // .contacts__link {
 //   display: flex;
 //   align-items: center;
