--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -2,6 +2,7 @@
 
     @media screen and (max-width: 769px) {
             text-align: center;
+            margin-bottom: 60px;
         }
 
     font-style: inherit;
