--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -37,6 +37,7 @@
 .footer__title {
 @media screen and (max-width: 769px) {
         text-align: center;
+        margin-top: 60px;
     }
 
     font-size: 14px;
