--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -10,6 +10,10 @@
     line-height: 1.15;
     text-align: center;
     color: var(--text-color-main);
+    
+    @media screen and (min-width: 1200px) {
+            line-height: 1.15;
+        }
 }
 
 .reqister-form {
