--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,9 +1,15 @@
 .client__link {
+
+    @media screen and (max-width: 769px) {
+            width: 210px;
+            // height: 92px;
+        }
+
     display: flex;
     align-items: center;
     justify-content: center;
     height: 92px;
-    width: 210px;
+    // width: 210px;
     border: 1px solid currentColor;
     border-radius: 4px;
     color: var(--icon-color);
